--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@
 }
 
 .sidebar {
-  width: 250px;
+  width: 220px;
   height: 100vh;
-  background-color: #6880b5;
-  color: white;
+  background-color: #ffffff;
+  color: black;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -14,11 +14,12 @@
 
 .sidebar-top {
   font-size: x-large;
+  font-weight: bold;
   padding-top: 20px;
   display: flex;
   align-items: center;
   cursor: pointer;
-  padding-bottom: 40px;
+  padding-bottom: 50px;
 }
 
 .sidebar-center {
@@ -31,8 +32,20 @@
 
 .list-item {
   margin-bottom: 2px;
+  margin-left: 10px;
   display: flex;
   align-items: center;
-  background-color: rgb(128, 170, 247);
+  /* background-color: rgb(128, 170, 247); */
   padding: 10px;
+}
+
+.list-item-icon {
+  width: 35px;
+}
+
+.list-item:hover,
+.list-item.active {
+  background-color: #e0e9ff;
+  color: #2a57cb;
+  font-weight: bold;
 }
